# operation

./: Dockerfile  README.md  cron.conf  docker-compose.yaml  makefile  pyproject.toml  severless.yml
.circleci/: config.yml
app/: config.py
app/entities/: candle.py  transaction.py
app/indicators/: ichimoku.py  moving_average.py
app/infra/api/: candle.py  transaction.py
app/infra/candle/: historical_candle.py
app/infra/s3/: csv.py
app/logic/: common.py  ichimoku_method.py  ichimoku_method_dynamic_stop.py  long_short_ma_crossing.py  long_short_ma_crossing_inverse.py
app/tasks/: __init__.py  backtest.py  get_historical_candles.py  ichimoku_method_backtest.py  ichimoku_method_dynamic_stop_backtest.py  long_short_ma_backtest.py  trade.py  trade_ichimoku.py
app/tests/: test_historical_candles.py
app/tests/candles/: test_historical_candles.py
app/tests/indicators/: test_ichimoku.py  test_moving_average.py
app/workflows/: autotrade.py  collect_historical_data.py
docker/: Dockerfile  docker-compose.yaml
locallambda/: lambda.py
