[tool.poetry]
name = "operation"
version = "0.1.0"
description = ""
authors = ["Rio114"]

[tool.poetry.dependencies]
python = "3.8.12"
pandas = "^1.3.4"
numpy = "^1.21.3"
isort = "^5.9.3"
black = "^21.10b0"
pytest = "^6.2.5"
boto3 = "^1.19.12"
oandapyV20 = "^0.7.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
